// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillDisplay components BillDisplay should match snap shot when done loading + bills 1`] = `
<div
  className="bill__wrapper"
>
  <div
    className="bill__section"
  >
    <div
      className="bill__list__section"
    >
      <div
        id="search__bill"
      >
        <span
          className="search__icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            />
          </svg>
           
        </span>
        <input
          className="form-control border-0"
          onChange={[Function]}
          placeholder="Search bill"
          type="text"
        />
      </div>
      <ul
        className="nav nav-tabs"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            + Add bill
          </a>
        </li>
      </ul>
      <div
        className="bill__container"
      >
        <div
          className="bill__card card"
          onClick={[Function]}
        >
          <div
            className="bill__items card-body"
          >
            <div
              className="bill__items card-text"
            >
              <div
                id="bill__icon"
              >
                <svg
                  color="rgba(0, 0, 0, 0.96)"
                  fill="currentColor"
                  height={24}
                  size={24}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.96)",
                    }
                  }
                  viewBox="0 0 384 512"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M202.021 0C122.202 0 70.503 32.703 29.914 91.026c-7.363 10.58-5.093 25.086 5.178 32.874l43.138 32.709c10.373 7.865 25.132 6.026 33.253-4.148 25.049-31.381 43.63-49.449 82.757-49.449 30.764 0 68.816 19.799 68.816 49.631 0 22.552-18.617 34.134-48.993 51.164-35.423 19.86-82.299 44.576-82.299 106.405V320c0 13.255 10.745 24 24 24h72.471c13.255 0 24-10.745 24-24v-5.773c0-42.86 125.268-44.645 125.268-160.627C377.504 66.256 286.902 0 202.021 0zM192 373.459c-38.196 0-69.271 31.075-69.271 69.271 0 38.195 31.075 69.27 69.271 69.27s69.271-31.075 69.271-69.271-31.075-69.27-69.271-69.27z"
                  />
                </svg>
              </div>
              <div
                className="bill__name__price"
              >
                <span
                  id="bill__name"
                >
                  BILL MOCK 1
                   
                </span>
                <span
                  id="bill__balance"
                >
                   
                  12.00
                   $  
                </span>
              </div>
            </div>
          </div>
          <hr
            className="card__seperator"
          />
        </div>
        <div
          className="bill__card card"
          onClick={[Function]}
        >
          <div
            className="bill__items card-body"
          >
            <div
              className="bill__items card-text"
            >
              <div
                id="bill__icon"
              >
                <svg
                  color="rgba(0, 0, 0, 0.96)"
                  fill="currentColor"
                  height={24}
                  size={24}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.96)",
                    }
                  }
                  viewBox="0 0 384 512"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M202.021 0C122.202 0 70.503 32.703 29.914 91.026c-7.363 10.58-5.093 25.086 5.178 32.874l43.138 32.709c10.373 7.865 25.132 6.026 33.253-4.148 25.049-31.381 43.63-49.449 82.757-49.449 30.764 0 68.816 19.799 68.816 49.631 0 22.552-18.617 34.134-48.993 51.164-35.423 19.86-82.299 44.576-82.299 106.405V320c0 13.255 10.745 24 24 24h72.471c13.255 0 24-10.745 24-24v-5.773c0-42.86 125.268-44.645 125.268-160.627C377.504 66.256 286.902 0 202.021 0zM192 373.459c-38.196 0-69.271 31.075-69.271 69.271 0 38.195 31.075 69.27 69.271 69.27s69.271-31.075 69.271-69.271-31.075-69.27-69.271-69.27z"
                  />
                </svg>
              </div>
              <div
                className="bill__name__price"
              >
                <span
                  id="bill__name"
                >
                  BILL MOCK 2
                   
                </span>
                <span
                  id="bill__balance"
                >
                   
                  15.00
                   $  
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="specific__bill__section"
    >
      <div
        className="bill__summary"
      >
        <h5>
           Split by : Unknown 
        </h5>
        <h5>
           Status : OPEN
        </h5>
        <h5>
           Total Amount Owed : 
          <span
            id="amount__owed"
          >
             
            27.00
             $
          </span>
           
        </h5>
        <h5>
           Total of bills : 
          2
           
        </h5>
      </div>
      <span
        id="more__details"
      >
         More details
      </span>
      <div
        className="large__bill"
      >
        Bill #  
        <div
          className="inner__bill_container"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`BillDisplay render snapshots 📸 BillDisplay should match snap shot when done loading + no bills 1`] = `
<div
  className="bill__wrapper"
>
  <p>
     No Bills Found
  </p>
</div>
`;

exports[`BillDisplay render snapshots 📸 BillDisplay should match snap shot when loading 1`] = `
<div
  className="bill__wrapper"
>
  <div
    className="billsnap-loader loader"
  >
    Loading...
  </div>
</div>
`;
